fix(general-row): overlapping text

--- a/recipes/leftbar/style/leftbar_row.less
+++ b/recipes/leftbar/style/leftbar_row.less
@@ -27,6 +27,7 @@
   --leftbar-row-action-position-bottom: 50%;
   --leftbar-row-action-width: var(--size-550);
   --leftbar-row-action-height: var(--leftbar-row-action-width);
+  --leftbar-row-label-width: calc(100% - (var(--leftbar-row-alpha-width) * 2));
 
   //  ============================================================================
   //  $   BASE STYLE
@@ -49,9 +50,15 @@
   //    ...
   //  </div>
   //
-  &:not(.dt-leftbar-row--no-action):hover {
-    --leftbar-row-omega-display: none;
-    --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
+  &:not(.dt-leftbar-row--no-action) {
+    .dt-leftbar-row__label {
+      flex: 0 1 var(--leftbar-row-label-width);
+    }
+
+    &:hover {
+      --leftbar-row-omega-display: none;
+      --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
+    }
   }
 
   &:hover {
@@ -67,6 +74,10 @@
   &--has-unread {
     --leftbar-row-description-font-weight: var(--fw-bold);
     --leftbar-row-alpha-color-foreground: var(--leftbar-row-color-foreground);
+
+    .dt-leftbar-row__label {
+      flex: 0 1 var(--leftbar-row-label-width);
+    }
   }
 
   &--muted {
@@ -200,7 +211,6 @@
   }
 
   &__label {
-    flex: 1;
     min-width: 0;
   }
 
